Escape URLs via URI components
Vs previous method of using u.toExternalForm. This way, URI will encode characters in the path correctly.